--- a/index.qmd
+++ b/index.qmd
@@ -9,7 +9,7 @@
 - Digital First
 - Housed in IUBL's Scholarly Communication Department
 
-## Who We Publish
+## Whom We Publish
 
 Manuscripts created by (at least one member of) the **IU community**
 
